fix: align alert text and map labels to center (#172)
Closes: #162

--- a/src/app/show-map/show-map.component.css
+++ b/src/app/show-map/show-map.component.css
@@ -5,6 +5,7 @@
   width: 85%;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 @media (orientation: landscape) {
   .content {
